<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="business.businessapp.MainActivity"
    android:fillViewport = "true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ImageView1"
            android:src="@drawable/vapiano"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/business_name"
            android:id="@+id/TextView1"
            android:layout_below="@+id/ImageView1"
            android:textSize="40sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:fontFamily="cursive"
            android:background="@color/red"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView2"
            android:layout_below="@id/TextView1"
            android:text="@string/business_info"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/red"
            android:fontFamily="cursive"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView3"
            android:layout_below="@id/TextView2"
            android:text="@string/adress"
            android:drawableLeft="@drawable/placeholder"
            android:padding="15dp"
            android:onClick="showLocation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView4"
            android:layout_below="@id/TextView3"
            android:text="@string/phone"
            android:padding="15dp"
            android:drawableLeft="@drawable/phone"
            android:onClick="callNumber"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView5"
            android:text=" Opening Hours:"
            android:layout_below="@id/TextView4"
            android:drawableLeft="@drawable/clock"
            android:padding="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView6"
            android:text="@string/hours"
            android:layout_below="@id/TextView5"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:layout_toEndOf="@id/TextView4"
            android:layout_toRightOf="@id/TextView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView7"
            android:text="@string/days"
            android:layout_below="@+id/TextView5"
            android:layout_margin="10dp"
            android:layout_toStartOf="@id/TextView6"
            android:layout_toLeftOf="@id/TextView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextView7"
            android:text="@string/website"
            android:drawableLeft="@drawable/internet"
            android:padding="15dp"
            android:onClick="goTo"/>

    </RelativeLayout>

</ScrollView>
